# OOP

./: .clangd  .gitignore
homeworks/hw1_var9/: .clangd  CMakeLists.txt  main.cpp
homeworks/hw1_var9/include/: allNumbers.h
homeworks/hw1_var9/src/: allNumbers.cpp
homeworks/hw1_var9/test/: tests01.cpp
